--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,9 @@ jobs:
           dotnet-version: 8.0.x
 
       - name: build pages
-        run: dotnet run
+        run: |
+          dotnet run
+          cp assets dist -r
 
       - name: deploy to github pages
         uses: peaceiris/actions-gh-pages@v3
